[package]
name = "rspc-tauri"
description = "Tauri adapter for rspc"
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/rspc"
documentation = "https://docs.rs/rspc-axum/latest/rspc-axum"
keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# TODO: Cleanup deps
[dependencies]
rspc = { version = "0.2.0", path = "../.." }
specta = { version = "1.0.5", features = ["serde", "typescript"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["sync", "rt", "macros"] }
tauri = { version = "2.1.1" }
