[package]
name = "rspc-tracing"
version = "0.0.0"
edition = "2021"
publish = false # TODO: Crate metadata & publish

[dependencies]
rspc = { path = "../../rspc" }
tracing = { workspace = true }
futures = { workspace = true }
tracing-futures = "0.2.5"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
