[package]
name = "rspc-zer"
version = "0.0.0"
edition = "2021"
publish = false # TODO: Crate metadata & publish

[dependencies]
rspc = { path = "../../rspc" }
serde = { workspace = true }
specta = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { version = "9", default-features = false }
cookie = { version = "0.18.1", features = ["percent-encode"] }

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
