[package]
name = "example-actix-web"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rspc = { path = "../../rspc", features = ["typescript", "rust", "unstable"] }
example-core = { path = "../core" }
rspc-actix-web = { path = "../../integrations/actix-web", features = [] }
actix-web = "4"
actix-cors = "0.7.0"
