[package]
name = "example-actix-web"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rspc = { path = "../../rspc", features = ["typescript", "rust"] }
example-core = { path = "../core" }
rspc-actix-web = { path = "../../integrations/actix-web", features = [] }
actix-web = "4"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
futures = "0.3"
rspc-zer = { version = "0.0.0", path = "../../crates/zer" }
