[package]
name = "example-axum"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rspc = { path = "../../rspc", features = ["typescript", "rust"] }
rspc-axum = { path = "../../integrations/axum", features = ["ws"] }
rspc-devtools = { version = "0.0.0", path = "../../crates/devtools" }
rspc-invalidation = { version = "0.0.0", path = "../../crates/invalidation" }
rspc-zer = { version = "0.0.0", path = "../../crates/zer" }
example-core = { path = "../core" }

tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.1", features = ["multipart"] }
tower-http = { version = "0.6.2", default-features = false, features = [
    "cors",
] }
futures = "0.3"
serde_json = "1.0.138"
streamunordered = "0.5.4"
serde.workspace = true
